--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulation</h1>
-    <h2>This application was deployed using AWS CodeDeploy by NCPL TEAM.CANADA</h2>
+    <h1>Congratulations</h1>
+    <h2>This application was deployed using AWS CodeDeploy by NCPL TEAM.CANADA- india</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
